--- a/html/_/index.html
+++ b/html/_/index.html
@@ -83,7 +83,7 @@ crossorigin=""/>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image" class="img-fluid mx-auto d-block logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
+  <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image" class="img-fluid max-height-80px logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
 </div>
 
 <div class="row h-20 align-items-start" style="background-color:green;">
@@ -100,6 +100,7 @@ crossorigin=""/>
 </div>
 
 <div class="row h-45 align-items-start text-center" style="background-color:grey;">
+	<!--Boutons support et news -->
   <div class="col">
     <a class="btn text-underline font-weight-bold  mt-2 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
     <a class="btn text-underline font-weight-bold mb-5 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
@@ -108,6 +109,7 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end" style="background-color:blue;">
   <div class="container-fluid text-center">
+  	<!--NewsLetter -->
    <form class="col-12 align-items-center m-0 p-0" action="">
 	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span>
 	  	<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
@@ -116,6 +118,7 @@ crossorigin=""/>
 	  	<input lang="en" type="submit" value="Register">
 	  	</p>
   </form>
+  <!--Boutons du bas -->
     <div class="row p-0 m-0">
       <div class="col-12 col-md-6 p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
