--- a/html/_/index.html
+++ b/html/_/index.html
@@ -83,7 +83,7 @@ crossorigin=""/>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <a class="btn save_map_status_on_leaving max-height-80px" role="button" href="../_/scentree.html"><img id="logo-image" class="img-fluid max-height-80px logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
+  <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image" class="img-fluid max-height-10px logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
 </div>
 
 <div class="row h-20 align-items-start" style="background-color:green;">
