--- a/html/_/index.html
+++ b/html/_/index.html
@@ -83,7 +83,9 @@ crossorigin=""/>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable mx-auto d-block max-height-30px" src="../img/logonoel.png" alt="le logo de Scentree"></a>
+  <div class="col-offset-2 col-8">
+  	<a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable mx-auto d-block max-height-30px" src="../img/logonoel.png" alt="le logo de Scentree"></a>
+  </div>
 </div>
 
 <div class="row h-20 align-items-start" style="background-color:green;">
