--- a/html/_/index.html
+++ b/html/_/index.html
@@ -83,7 +83,7 @@ crossorigin=""/>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <div class="col-offset-4 col-8" style="background-color:red;">
+  <div class="row h-8" style="background-color:red;">
   	<a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable mx-auto d-block max-height-100px" src="../img/logonoel.png" alt="le logo de Scentree"></a>
   </div>
 </div>
