--- a/html/_/index.html
+++ b/html/_/index.html
@@ -76,21 +76,21 @@ crossorigin=""/>
 <div id="menu-block" class="d-none d-md-flex  col-md-3 h-100 fillright">
 <div class="container-fluid">
 
-<div class="row h-10 align-items-start" style="background-color:white;">
+<div class="row h-10 align-items-start">
   <div class="clearfix w-100">
     <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.png" alt="ScenTree in english" class="imgen">
     </button>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <div class="essai col-12 text-center" style="background-color:blue;">
+  <div class="essai col-12 text-center">
   	<a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logonoel.png" alt="le logo de Scentree"></a>
   </div>
 </div>
 
 <div class="row h-20 align-items-start" style="background-color:green;">
   <div class="col-12 align-items-center m-0">
-    <div class="text-underline font-weight-bold text-size-1-5vw d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
+    <div class="text-underline font-weight-bold text-size-1-5vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <!--Recherche -->
   <div class="col-12 text-center align-items-start">
