--- a/html/_/index.html
+++ b/html/_/index.html
@@ -88,7 +88,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-20 align-items-start" style="background-color:green;">
+<div class="row h-20 align-items-start">
   <div class="col-12 align-items-center m-0">
     <div class="text-underline font-weight-bold text-size-1-5vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
@@ -101,7 +101,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-45 align-items-start text-center">
+<div class="row h-45 align-items-start text-center" style="background-color:grey;">
 	<!--Boutons support et news -->
   <div class="col">
     <a class="btn text-underline font-weight-bold  mt-2 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
