--- a/html/_/index.html
+++ b/html/_/index.html
@@ -101,7 +101,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-60 align-items-start text-center" style="background-color:grey;">
+<div class="row align-items-start text-center" style="background-color:grey;">
 	<!--Boutons support et news -->
   <div class="col">
     <a class="btn text-underline font-weight-bold  mt-2 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
