--- a/html/_/index.html
+++ b/html/_/index.html
@@ -104,7 +104,7 @@ crossorigin=""/>
 <div class="row align-items-start text-center" style="background-color:grey;">
 	<!--Boutons support et news -->
   <div class="col">
-    <a class="btn text-underline font-weight-bold mt-2 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
+    <a class="btn text-underline font-weight-bold mt-3 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
     <br>
     <a class="btn text-underline font-weight-bold text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
   </div>		
@@ -114,7 +114,7 @@ crossorigin=""/>
   <div class="container-fluid text-center">
   	<!--NewsLetter -->
    <form class="col-12 align-items-center m-0 p-0" action="">
-	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span>
+	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span><br>
 	  	<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
 	  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
 	  	<input lang="fr" type="submit" value="S'inscrire">
