--- a/html/_/index.html
+++ b/html/_/index.html
@@ -110,7 +110,7 @@ crossorigin=""/>
   </div>		
 </div>
 
-<div class="row h-15 align-items-end">
+<div class="row h-15 align-items-end mt-3">
   <div class="container-fluid text-center">
   	<!--NewsLetter -->
    <form class="col-12 align-items-center m-0 p-0" action="">
