--- a/html/_/index.html
+++ b/html/_/index.html
@@ -135,7 +135,7 @@ crossorigin=""/>
       </div>
       <div class="col-12 col-md-6 p-0">
         <button class="btn btn-sm" type="button" data-toggle="modal" data-target="#lesMentionsLegales">
-         <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
+         <NOBR><span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span></NOBR>
         </button>
       </div>
       <div class="col-12 col-md-6 p-0 pl-2">
