--- a/html/_/index.html
+++ b/html/_/index.html
@@ -115,10 +115,14 @@ crossorigin=""/>
   	<!--NewsLetter -->
    <form class="col-12 align-items-center m-0 p-0" action="">
 	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span><br>
-	  	<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
-	  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
-	  	<input lang="fr" type="submit" value="S'inscrire">
-	  	<input lang="en" type="submit" value="Register">
+	  	<div class="row col-12" style="background-color=grey;">
+	  		<NOBR>
+	  		<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
+		  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
+		  	<input lang="fr" type="submit" value="S'inscrire">
+		  	<input lang="en" type="submit" value="Register">
+		  	</NOBR>
+		</div>
 	  	</p>
   </form>
   <!--Boutons du bas -->
