--- a/html/_/index.html
+++ b/html/_/index.html
@@ -115,7 +115,7 @@ crossorigin=""/>
   	<!--NewsLetter -->
    <form class="col-12 align-items-center m-0 p-0" action="">
 	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span><br>
-	  	<div class="row col-12" style="background-color=grey;">
+	  	<div class="row col-12 m-0 p-0" style="background-color=grey;">
 	  		<NOBR>
 	  		<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
 		  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
