--- a/html/_/index.html
+++ b/html/_/index.html
@@ -104,9 +104,9 @@ crossorigin=""/>
 <div class="row align-items-start text-center" style="background-color:grey;">
 	<!--Boutons support et news -->
   <div class="col">
-    <a class="btn text-underline font-weight-bold mt-5 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
+    <a class="btn text-underline font-weight-bold mt-5 mb-1 text-in-color-brown text-size-1-5vw  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
     <br>
-    <a class="btn text-underline font-weight-bold mb-5 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
+    <a class="btn text-underline font-weight-bold mb-5 text-in-color-brown text-size-1-5vw  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
   </div>		
 </div>
 
