--- a/html/_/index.html
+++ b/html/_/index.html
@@ -110,10 +110,10 @@ crossorigin=""/>
   </div>		
 </div>
 
-<div class="row h-15 align-items-end mt-3">
+<div class="row h-15 align-items-end mt-3" >
   <div class="container-fluid text-center">
   	<!--NewsLetter -->
-   <form class="col-12 align-items-center m-0 p-0" action="">
+   <form class="col-12 align-items-center m-0 p-0" action="" style="background-color:blue;">
 	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span><br>
 	  		<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
 		  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
