--- a/html/_/index.html
+++ b/html/_/index.html
@@ -114,7 +114,7 @@ crossorigin=""/>
   <div class="container-fluid text-center">
   	<!--NewsLetter -->
    <form class="col-12 m-0 p-0" action="" >
-   	    <p class="item d-none d-sm-none d-md-block text-underline"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span><br>
+   	    <p class="item d-none d-sm-none d-md-block"><span lang="fr"><u>Inscrivez-vous à notre newletter:</u></span><span lang="en"><u>Register for our newletter :</u></span><br>
 	  		<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
 		  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
 		  	<input lang="fr" type="submit" value="S'inscrire">
