--- a/html/_/index.html
+++ b/html/_/index.html
@@ -115,7 +115,9 @@ crossorigin=""/>
   	<!--NewsLetter -->
    <form class="col-12 m-0 p-0" action="" >
    	    <p class="item d-none d-sm-none d-md-block">
-   	    	<span class="text-underline text-size-1-5vw" lang="fr">Inscrivez-vous à notre newletter:</span><span class="text-underline text-size-1-5vw" lang="en">Register for our newletter :</span><br>
+   	    	<span class="text-underline text-size-1-5vw" lang="fr">Inscrivez-vous à notre newletter:</span><span class="text-underline text-size-1-5vw" lang="en">Register for our newletter :</span>
+   	    </p>
+   	    <p class="row item d-none d-sm-none d-md-block">
 	  		<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
 		  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
 		  	<input lang="fr" type="submit" value="S'inscrire">
