--- a/html/_/index.html
+++ b/html/_/index.html
@@ -114,10 +114,10 @@ crossorigin=""/>
   <div class="container-fluid text-center">
   	<!--NewsLetter -->
    <form class="col-12 m-0 p-0" action="" >
-   	    <p class="item d-none d-sm-none d-md-block">
+   	    <p class="item d-none d-sm-none d-md-block m-0 p-0">
    	    	<span class="text-underline text-size-1-1vw" lang="fr">Inscrivez-vous à notre newletter:</span><span class="text-underline text-size-1-1vw" lang="en">Register for our newletter :</span>
    	    </p>
-   	    <p class="row item d-none d-sm-none d-md-block m-0 p-0">
+   	    <p class="row item d-none d-sm-none d-md-block">
 	  		<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
 		  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
 		  	<input lang="fr" type="submit" value="S'inscrire">
