--- a/html/_/index.html
+++ b/html/_/index.html
@@ -104,7 +104,7 @@ crossorigin=""/>
 <div class="row align-items-start text-center">
 	<!--Boutons support et news -->
   <div class="col">
-    <a class="btn text-underline font-weight-bold mt-5 mb-3 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span><span class="glyphicon glyphicon-info-sign"></span></a>
+    <a class="btn text-underline font-weight-bold mt-5 mb-3 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span><sup><i class="fas fa-exclamation-triangle"></i></sup></a>
     <br>
     <a class="btn text-underline font-weight-bold mb-5 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span><span class="notif">1</span></a>
   </div>		
