--- a/html/_/index.html
+++ b/html/_/index.html
@@ -84,7 +84,7 @@ crossorigin=""/>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <div class="essai col-12 text-center">
-  	<a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logonoel.png" alt="le logo de Scentree"></a>
+    <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logonoel.png" alt="le logo de Scentree"></a>
   </div>
 </div>
 
@@ -102,27 +102,27 @@ crossorigin=""/>
 </div>
 
 <div class="row align-items-start text-center">
-	<!--Boutons support et news -->
+  <!--Boutons support et news -->
   <div class="col">
-    <a class="btn text-underline font-weight-bold mt-5 mb-3 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span></a><a><i class="fas fa-exclamation-triangle" style="color:red; size: 120%;"></i></a>
+    <a class="btn text-underline font-weight-bold mt-5 mb-3 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span></a><a><i class="fas fa-info-circle" style="color:red; size: 120%;"></i></a>
     <br>
-    <a class="btn text-underline font-weight-bold mb-5 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span><span class="notif">1</span></a>
-  </div>		
+    <a class="btn text-underline font-weight-bold mb-5 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
+  </div>    
 </div>
 
 <div class="row h-15 align-items-end mt-3" >
   <div class="container-fluid text-center">
-  	<!--NewsLetter -->
+    <!--NewsLetter -->
    <form class="col-12 m-0 p-0" action="" >
-   	    <p class="item d-none d-sm-none d-md-block m-0 p-0">
-   	    	<span class="text-underline text-size-1-1vw" lang="fr">Inscrivez-vous à notre newletter:</span><span class="text-underline text-size-1-1vw" lang="en">Register for our newletter :</span>
-   	    </p>
-   	    <p class="row item d-none d-sm-none d-md-block mb-1 pb-1">
-	  		<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
-		  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
-		  	<input lang="fr" type="submit" value="S'inscrire">
-		  	<input lang="en" type="submit" value="Register">
-	  	</p>
+        <p class="item d-none d-sm-none d-md-block m-0 p-0">
+          <span class="text-underline text-size-1-1vw" lang="fr">Inscrivez-vous à notre newletter:</span><span class="text-underline text-size-1-1vw" lang="en">Register for our newletter :</span>
+        </p>
+        <p class="row item d-none d-sm-none d-md-block mb-1 pb-1">
+        <input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
+        <input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
+        <input lang="fr" type="submit" value="S'inscrire">
+        <input lang="en" type="submit" value="Register">
+      </p>
   </form>
   <!--Boutons du bas -->
     <div class="row p-0 m-0">
