--- a/html/_/index.html
+++ b/html/_/index.html
@@ -106,7 +106,7 @@ crossorigin=""/>
   <div class="col">
     <a class="btn text-underline font-weight-bold mt-5 mb-3 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><i class="fas fa-info-circle notif"></i></a>
     <br>
-    <a class="btn text-underline font-weight-bold mb-5 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span><i class="fas fa-info-circle notif"></i></a>
+    <a class="btn text-underline font-weight-bold mb-3 text-in-color-brown text-size-1-3vw  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés ! </span><span lang="en">News</span><i class="fas fa-info-circle notif"></i></a>
   </div>    
 </div>
 
