--- a/html/_/index.html
+++ b/html/_/index.html
@@ -88,7 +88,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-20 align-items-start">
+<div class="row h-20 align-items-start mb-3">
   <div class="col-12 align-items-center m-0">
     <div class="font-weight-bold text-size-1-1vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
