--- a/html/_/index.html
+++ b/html/_/index.html
@@ -117,26 +117,26 @@ crossorigin=""/>
         <p class="item d-none d-sm-none d-md-block m-0 p-0">
           <span class="text-underline text-size-1-1vw" lang="fr">Inscrivez-vous à notre newletter:</span><span class="text-underline text-size-1-1vw" lang="en">Register for our newletter :</span>
         </p>
-        <p class="row item d-none d-sm-none d-md-block mb-1 pb-1">
+        <!--<p class="row item d-none d-sm-none d-md-block mb-1 pb-1">
         <input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
         <input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
         <input lang="fr" type="submit" value="S'inscrire">
         <input lang="en" type="submit" value="Register">
-      </p>
+      </p>-->
   </form>
   <!--Boutons du bas -->
     <div class="row p-0 m-0">
-      <div class="col-12 col-md-6 p-0">
+      <div class="col-12 text-center p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
         </a>
       </div>
-      <div class="col-12 col-md-6 p-0">
+      <div class="col-12 text-center">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/contacts.html">
         <span lang="fr">Contacts</span><span lang="en">Contacts</span>
         </a>
       </div>
-      <div class="col-12 col-md-6 p-0">
+      <div class="col-12 text-center p-0">
         <button class="btn btn-sm" type="button" data-toggle="modal" data-target="#lesMentionsLegales">
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </button>
@@ -146,7 +146,6 @@ crossorigin=""/>
           <div class="row">
             <div class="col-4 p-0" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
             <div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
-            <div class="col-4 p-0"><a class="twitter_button" href="https://www.twitter.com/Scentree1" target="_blank"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-25px" /></a></div>
           </div>
         </div>
       </div>
