--- a/html/_/index.html
+++ b/html/_/index.html
@@ -115,7 +115,7 @@ crossorigin=""/>
     <!--NewsLetter -->
    <form class="col-12 m-0 p-0" action="" >
         <p class="item d-none d-sm-none d-md-block m-0 p-0">
-          <span class="text-underline text-size-1-1vw" lang="fr">Inscrivez-vous à notre newletter:</span><span class="text-underline text-size-1-1vw" lang="en">Register for our newletter :</span>
+          <span class="text-size-1-1vw" lang="fr">Newletter</span><span class="text-underline text-size-1-1vw" lang="en">Newletter</span>
         </p>
         <!--<p class="row item d-none d-sm-none d-md-block mb-1 pb-1">
         <input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
