--- a/html/_/index.html
+++ b/html/_/index.html
@@ -143,8 +143,8 @@ crossorigin=""/>
       </div>
       <div class="col-12 col-md-6 p-0 pl-2">
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-4 p-0" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
+          <div class="row text-center">
+            <div class="col-4 p-0" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><i class="fab fa-instagram" alt="vers notre linkedIn" class="img-fluid max-height-25px" ></i></a></div>
             <div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
           </div>
         </div>
