--- a/html/_/index.html
+++ b/html/_/index.html
@@ -112,7 +112,7 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end mt-3" >
   <div class="container-fluid text-center">
-  	
+
     <!--NewsLetter -->
    <!--<form class="col-12 m-0 p-0" action="" >
         <p class="item d-none d-sm-none d-md-block m-0 p-0">
@@ -148,9 +148,9 @@ crossorigin=""/>
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </button>
       </div>
-      <div class="col-12 col-md-6 p-0 pl-2">
+      <div class="col-12 text-center p-0">
         <div class="container-fluid">
-          <div class="row text-center">
+          <div class="row">
             <div class="col-4 p-0" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
             <div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
           </div>
