--- a/html/_/index.html
+++ b/html/_/index.html
@@ -127,7 +127,7 @@ crossorigin=""/>
   </form>-->
 
   <!--Boutons du bas -->
-    <div class="row p-0 m-0">
+    <div class="row p-0 m-0" style="background-color: red;">
       <div class="col-12 text-center p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
@@ -148,10 +148,10 @@ crossorigin=""/>
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </button>
       </div>
-      <div class="col-12 text-center p-0">
+      <div class="col-12 text-center mb-1">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-4 p-0" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
+            <div class="col-4" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
             <div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
           </div>
         </div>
