--- a/html/_/index.html
+++ b/html/_/index.html
@@ -151,8 +151,9 @@ crossorigin=""/>
       <div class="col-12 text-center mb-1">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-4" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
-            <div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
+            <div class="col-offset-2 col-2" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
+            <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
+            <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
           </div>
         </div>
       </div>
