--- a/html/_/index.html
+++ b/html/_/index.html
@@ -126,8 +126,8 @@ crossorigin=""/>
       </p>
   </form>-->
 
-  <!--Boutons du bas -->
-    <div class="row p-0 m-0" style="background-color: red;">
+  <!--Boutons du bas   
+    <div class="row col-12 p-0 m-0" style="background-color: red;">
       <div class="col-12 text-center p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
@@ -148,13 +148,39 @@ crossorigin=""/>
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </button>
       </div>
-      <div class="col-12 text-center mb-1">
+      <div class="col-12 text-center ">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-offset-2 col-2" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
-            <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
-            <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
+            <div class="col-offset-2 col-2" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid" /></a></div>
+            <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
+            <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
+      <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
+    </div>
+  </div>
+</div>-->
+	<div class="col-12 p-0 m-0" style="background-color: red;">
+        <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
+          <span lang="fr">Newletter</span><span lang="en">Newletter</span>
+        </a>
+        <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/sources.html">
+          <span lang="fr">Sources</span><span lang="en">Sources</span>
+        </a>
+        <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/contacts.html">
+        <span lang="fr">Contacts</span><span lang="en">Contacts</span>
+        </a>
+        <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/mentionslegales.html">
+         <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
+        </a>
+      <div class="row col-12 text-center">
+         <div class="col-offset-2 col-2" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid" /></a></div>
+         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
+         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
+         </div>
         </div>
       </div>
     </div>
