--- a/html/_/index.html
+++ b/html/_/index.html
@@ -176,17 +176,15 @@ crossorigin=""/>
         <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/mentionslegales.html">
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
-      <div class="row col-12 text-center">
-         <div class="col-offset-2 col-2" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid" /></a></div>
-         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
-         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
-         </div>
-        </div>
-      </div>
+      <!--<div class="row col-12 text-center">
+	         <div class="col-offset-2 col-2" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid" /></a></div>
+	         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
+	         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
+         </div>-->
     </div>
-    <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
-      <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
-    </div>
+        <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
+      		<sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
+    	</div>
   </div>
 </div>
 
