--- a/html/_/index.html
+++ b/html/_/index.html
@@ -126,8 +126,8 @@ crossorigin=""/>
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
       <div class="row col-12 text-center" style="background-color: blue;">
-	         <!--<div class="col-offset-2 col-2" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid" /></a></div>
-	         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
+	        <a class="fab fa-linkedin" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+	         <!--<div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
 	         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>-->
          </div>
     </div>
