--- a/html/_/index.html
+++ b/html/_/index.html
@@ -125,7 +125,7 @@ crossorigin=""/>
         <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/mentionslegales.html">
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
-      <div class="row col-12 text-center" style="background-color: blue;">
+      <div class="col-12 text-center" style="background-color: blue;">
 	        <a class="fab fa-linkedin" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
 	         <!--<div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
 	         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>-->
