--- a/html/_/index.html
+++ b/html/_/index.html
@@ -127,9 +127,9 @@ crossorigin=""/>
         </a>
       <div class="col-12 text-center" style="background-color: blue;">
 	        <a class="fab fa-linkedin" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-	         <!--<div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>
-	         <div class="col-offset-1 col-2 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid" /></a></div>-->
-         </div>
+	        <a class="fab fa-instagram" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
+	        <a class="fab fa-facebook-square" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+      </div>
     </div>
         <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
       		<sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
