--- a/html/_/index.html
+++ b/html/_/index.html
@@ -126,9 +126,9 @@ crossorigin=""/>
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
       <div class="col-12 text-center" style="background-color: blue;">
-	        <a class="fab fa-linkedin col-offset-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-	        <a class="fab fa-instagram col-offset-2" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-	        <a class="fab fa-facebook-square col-offset-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+	        <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+	        <a class="fab fa-instagram ml-2" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
+	        <a class="fab fa-facebook-square ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
       </div>
     </div>
         <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
