--- a/html/_/index.html
+++ b/html/_/index.html
@@ -112,7 +112,7 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end mt-3" >
   <div class="container-fluid text-center">
-	<div class="col-12 p-0 m-0" style="background-color: red;">
+	<div class="col-12 p-0 m-0">
         <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
         </a>
@@ -125,10 +125,10 @@ crossorigin=""/>
         <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/mentionslegales.html">
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
-      <div class="col-12 text-center" style="background-color: blue;">
-	        <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-	        <a class="fab fa-instagram ml-2" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-	        <a class="fab fa-facebook-square ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+      <div class="col-12 text-center">
+	        <a class="fab fa-linkedin ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+	        <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
+	        <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
       </div>
     </div>
         <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
