--- a/html/_/index.html
+++ b/html/_/index.html
@@ -110,7 +110,7 @@ crossorigin=""/>
   </div>    
 </div>
 
-<div class="row h-15 align-items-end mt-3" >
+<div class="row h-15 align-items-end mt-5 mb-3" >
   <div class="container-fluid text-center">
 	<div class="col-12 p-0 m-0">
         <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
