--- a/html/_/index.html
+++ b/html/_/index.html
@@ -110,9 +110,9 @@ crossorigin=""/>
   </div>    
 </div>
 
-<div class="row h-15 align-items-end mt-2 mb-1" >
+<div class="row h-15 align-items-end mt-4" >
   <div class="container-fluid text-center">
-	<div class="col-12 p-0 m-0">
+	<div class="col-12 p-0 mb-3">
         <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
         </a>
@@ -131,9 +131,9 @@ crossorigin=""/>
 	        <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
       </div>
     </div>
-        <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
-      		<sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
-    	</div>
+   <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
+      	<sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
+   </div>
   </div>
 </div>
 
