--- a/html/_/index.html
+++ b/html/_/index.html
@@ -113,16 +113,16 @@ crossorigin=""/>
 <div class="row h-15 align-items-end mt-2" >
   <div class="container-fluid text-center">
 	<div class="col-12 p-0 mb-3">
-        <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
+        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
         </a>
-        <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/sources.html">
+        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
         </a>
-        <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/contacts.html">
+        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/contacts.html">
         <span lang="fr">Contacts</span><span lang="en">Contacts</span>
         </a>
-        <a class="col-12 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/mentionslegales.html">
+        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/mentionslegales.html">
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
       <div class="col-12 text-center">
