--- a/html/_/index.html
+++ b/html/_/index.html
@@ -77,13 +77,13 @@ crossorigin=""/>
 <div class="container-fluid">
 
 <div class="row h-10 align-items-start">
-  <div class="clearfix w-100">
+  <div class="clearfix w-100 h-3">
     <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.png" alt="ScenTree in english" class="imgen">
     </button>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <div class="essai col-12 text-center">
+  <div class="col-12 h-7 text-center">
     <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logonoel.png" alt="le logo de Scentree"></a>
   </div>
 </div>
