--- a/html/_/index.html
+++ b/html/_/index.html
@@ -76,24 +76,24 @@ crossorigin=""/>
 <div id="menu-block" class="d-none d-md-flex  col-md-3 h-100 fillright">
 <div class="container-fluid">
 
-<div class="row h-20 align-items-start" style="background-color:white;">
-  <div class="clearfix w-100 h-6">
+<div class="row align-items-start" style="background-color:white;">
+  <div class="clearfix w-100">
     <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.png" alt="ScenTree in english" class="imgen">
     </button>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <div class="col-12 h-14 text-center">
+  <div class="col-12 text-center">
     <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logonoel.png" alt="le logo de Scentree"></a>
   </div>
 </div>
 
-<div class="row h-10 align-items-start mb-3"  style="background-color:green;">
+<div class="row align-items-start mb-3"  style="background-color:green;">
   <div class="col-12 align-items-center m-0">
     <div class="font-weight-bold text-size-1-1vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <!--Recherche -->
-  <div class="col-12 text-center align-items-start">
+  <div class="col-12 text-center align-items-start" style="background-color:white;">
   <form class="" action="" autocomplete="off" id="searchForm">
     <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
     <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
