--- a/html/_/index.html
+++ b/html/_/index.html
@@ -93,7 +93,7 @@ crossorigin=""/>
     <div class="font-weight-bold text-size-1-1vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <!--Recherche -->
-  <div class="col-12 text-center align-items-start" style="background-color:white;">
+  <div class="col-12 text-center align-items-start">
   <form class="" action="" autocomplete="off" id="searchForm">
     <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
     <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
@@ -101,7 +101,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row align-items-start text-center">
+<div class="row align-items-start text-center"  style="background-color:white;">
   <!--Boutons support et news -->
   <div class="col">
     <a class="btn mt-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><i class="fas fa-info-circle notif"></i></a>
@@ -110,7 +110,7 @@ crossorigin=""/>
   </div>    
 </div>
 
-<div class="row h-15 align-items-end mt-2" >
+<div class="row h-15 align-items-end mt-2">
   <div class="container-fluid text-center">
 	<div class="col-12 p-0 mb-3">
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
