--- a/html/_/index.html
+++ b/html/_/index.html
@@ -106,11 +106,11 @@ crossorigin=""/>
   <div class="col">
     <a class="btn mt-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><!--<i class="fas fa-info-circle notif"></i>--></a>
     <br>
-    <a class="btn mb-3 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span><!--<i class="fas fa-info-circle notif"></i>--></a>
+    <a class="btn mb-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span><!--<i class="fas fa-info-circle notif"></i>--></a>
   </div>    
 </div>
 
-<div class="row h-15 align-items-end mt-2"  style="background-color:green;">
+<div class="row h-15 align-items-end"  style="background-color:green;">
   <div class="container-fluid text-center">
 	<div class="col-12 p-0 mb-3">
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
