--- a/html/_/index.html
+++ b/html/_/index.html
@@ -112,8 +112,8 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end"  style="background-color:green;">
   <div class="container-fluid text-center">
-	<div class="col-12 p-0 mt-4 mb-2" style="background-color:white;">
-        <a class="col-12  m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
+	<div class="col-12 p-0 mt-5 mb-2" style="background-color:white;">
+        <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
         </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/sources.html">
