--- a/html/_/index.html
+++ b/html/_/index.html
@@ -76,7 +76,7 @@ crossorigin=""/>
 <div id="menu-block" class="d-none d-md-flex  col-md-3 h-100 fillright">
 <div class="container-fluid">
 
-<div class="row align-items-start" style="background-color:white;">
+<div class="row align-items-start">
   <div class="clearfix w-100">
     <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.png" alt="ScenTree in english" class="imgen">
     </button>
@@ -88,7 +88,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row align-items-start"  style="background-color:green;">
+<div class="row align-items-start">
   <div class="col-12 align-items-center m-0">
     <div class="font-weight-bold text-size-1-1vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
@@ -101,7 +101,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row align-items-start text-center"  style="background-color:white;">
+<div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
     <a class="btn mt-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><!--<i class="fas fa-info-circle notif"></i>--></a>
@@ -110,9 +110,9 @@ crossorigin=""/>
   </div>    
 </div>
 
-<div class="row h-15 align-items-end"  style="background-color:green;">
+<div class="row h-15 align-items-end">
   <div class="container-fluid text-center">
-	<div class="col-12 p-0 mt-5 mb-1" style="background-color:white;">
+	<div class="col-12 p-0 mt-5 mb-1">
         <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
         </a>
