--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -40,7 +40,7 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h4 class="text-center  modal-title modal-title1">Les nouveautés de ScenTree</h4>
+  <h1 class="text-center modal-title modal-title1">Les nouveautés de ScenTree</h1>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside2">
@@ -56,7 +56,7 @@ crossorigin=""/>
       <li>
         <div class="content">
           <h3 id="heading12">8 décembre 2019 
-            <br>Ajout de 7 nouvelles matières premières
+            <br> <span class="ajoutMP"> Ajout de 7 nouvelles matières premières</span>
           </h3>
           <p>
               Rhum Brun Absolue (CAS N°: 90604-30-1)
