--- a/html/_/newletter.html
+++ b/html/_/newletter.html
@@ -38,7 +38,7 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h4 class="text-center  modal-title modal-title1"><span lang="fr">Mentions Légales </span><span lang="en"> Legal Mentions</span></h4>
+  <h4 class="text-center  modal-title modal-title1"><span lang="fr">Inscrivez-vous à notre Newletter </span><span lang="en">Register to our newletter</span></h4>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
