--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Classification innovante des ingrédients parfum</title>
-<title lang="en">ScenTree - The new collaborative perfumery ingredients classification</title>
+<title lang="fr">ScenTree - News_Les nouveautés</title>
+<title lang="en">ScenTree - News_Les nouveautés </title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
@@ -53,6 +53,24 @@ crossorigin=""/>
 
   <div class="timeline col-12">
     <ul>
+      <li>
+        <div class="content">
+          <h3 id="heading12">15 décembre 2019 
+            <br> <span class="ajoutMP">Ajout de 8 nouvelles matières premières</span>
+          </h3>
+          <p>
+              Bois de Hô (CAS N°: 8022-91-1)
+              <br>Eau de Brout Absolue (CAS N°: 8016-38-4)
+              <br>Propionate de linalyl (CAS N°: 144-39-8)
+              <br>Lie de Vin Blanche HE (CAS N°: 8016-21-5)
+              <br>Champaca Absolue (CAS N°: 94333-99-0)
+              <br>Gaulthérie Couchée HE (CAS N°: 90045-28-6)
+              <br>Salicylate de Méthyle (CAS N°: 119-36-8)
+              <br>Pin Absolue (CAS N°: 8023-99-2)
+          </p>
+          <p> Arrivée des liaisons entre les fiches d'identités des ingrédients. </p>
+        </div>
+      </li>
       <li>
         <div class="content">
           <h3 id="heading12">8 décembre 2019 
